Added schema.org markup.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<body itemscope itemtype="https://schema.org/Person">
+<h1 itemprop="name">
+	<span itemprop="givenName">Lars</span>
+	<span itemprop="additionalName">Berg</span>
+	<span itemprop="familyName">Hustveit</span>
+</h1>
+<p>I'm testing GitHub Pages.</p>
+<a href="https://lars.berg.hustve.it" itemprop="url">lars.berg.hustve.it</a>
 </body>
 </html>
