Added same as links.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 	<span itemprop="additionalName">Berg</span>
 	<span itemprop="familyName">Hustveit</span>
 </h1>
-<p>I'm testing GitHub Pages.</p>
-<a href="https://lars.berg.hustve.it" itemprop="url">lars.berg.hustve.it</a>
+<p>I'm testing GitHub Pages and schemas for structured data from Schema.org.</p>
+<ul>
+	<li>IRI: <a itemprop="url" href="https://lars.berg.hustve.it">https://lars.berg.hustve.it</a></li>
+	<li><a itemprop="sameAs" href="https://twitter.com/hustveit">Twitter</a></li>
+	<li><a itemprop="sameAs" href="https://github.com/hustveit">GitHub</a></li>
+	<li><a itemprop="sameAs" href="https://no.linkedin.com/in/hustveit">LinkedIn</a></li>
+</ul>
 </body>
 </html>
